Closed Bug 1321140 Opened 8 years ago Closed 8 years ago

We don't need to clamp up the SeekTarget AGAIN in the SeekTask.

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: kaku, Assigned: kaku)

References

Details

Attachments

(1 file)

Assignee: nobody → kaku
OS: Unspecified → All
Hardware: Unspecified → All
Blocks: 1318610
Depends on: 1320466
Comment on attachment 8815551 [details]
Bug 1321140 - don't clamp up the SeekTarget again in the AccurateSeekTask's constructor;

https://reviewboard.mozilla.org/r/96432/#review96664
Attachment #8815551 - Flags: review?(jwwang) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/8f7f94968f7b
don't clamp up the SeekTarget again in the AccurateSeekTask's constructor; r=jwwang
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/8f7f94968f7b
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: