Bug 1321140 - don't clamp up the SeekTarget again in the AccurateSeekTask's constructor; r=jwwang

MozReview-Commit-ID: KQro2Sk1dRg